--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_toEndOf="@+id/textView1"
         android:layout_marginLeft="53dp"
         android:layout_marginStart="53dp"
-        android:clickable="false" />
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,5 +45,6 @@
         android:id="@+id/switch2"
         android:layout_alignTop="@+id/textView2"
         android:layout_alignLeft="@+id/switch1"
-        android:layout_alignStart="@+id/switch1" />
+        android:layout_alignStart="@+id/switch1"
+        />
 </RelativeLayout>
